--- a/content/pages/contacts/index.adoc
+++ b/content/pages/contacts/index.adoc
@@ -1,8 +1,7 @@
----
-title: "Contact me"
-template: "page"
-socialImage: "/book.jpg"
----
+= Contact me
+
+:page-template: page
+:page-socialImage: /book.jpg
 
 Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.
 
@@ -12,7 +11,7 @@ Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetr
 
 _Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi._
 
-## Header Level 2
+== Header Level 2
 
 Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.
 
@@ -20,12 +19,12 @@ Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulpu
 - Aliquam tincidunt mauris eu risus.
 - Vestibulum auctor dapibus neque.
 
-### Header Level 3
+=== Header Level 3
 
 Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec **consectetuer** ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.
 
 Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.
 
-#### Header Level 4
+==== Header Level 4
 
 Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est.
