--- a/content/pages/links/index.adoc
+++ b/content/pages/links/index.adoc
@@ -1,30 +1,24 @@
 = Links
 
 :page-template: page
-:page-socialImage: /book.jpg
+:page-socialImage: /pages/links.png
 
-Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.
+Different articles I worked on.
 
-Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui.
+== List of presentation
 
-![Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.](/book.jpg)
+* http://chalda.cz
 
-_Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi._
+== Narayana and XA transactions
 
-== Header Level 2
+* https://developer.jboss.org/wiki/TwoPhaseCommit2PC
+* https://developer.jboss.org/wiki/Three-phaseCommitProtocol - https://developer.jboss.org/docs/DOC-56051 - Three-phase commit protocol (3PC)
+* http://jbossts.blogspot.com/2018/06/narayana-commit-markable-resource.html
+* http://jbossts.blogspot.cz/2018/01/narayana-periodic-recovery-of-xa.html
+* http://jbossts.blogspot.cz/2018/01/recovery-of-narayana-jdbc-transactional.html
+* https://developer.jboss.org/wiki/MSAQuickstartsWithLRAREST-ATOnMinishift  - https://developer.jboss.org/docs/DOC-56074 MSA quickstarts with LRA/REST-AT on Minishift
+* http://jbossts.blogspot.cz/2017/06/sagas-and-how-they-differ-from-two.html
 
-Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.
+== Workshops
 
-- **Lorem ipsum** dolor sit amet, consectetuer adipiscing elit.
-- Aliquam tincidunt mauris eu risus.
-- Vestibulum auctor dapibus neque.
-
-=== Header Level 3
-
-Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec **consectetuer** ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.
-
-Pellentesque fermentum dolor. Aliquam quam lectus, facilisis auctor, ultrices ut, elementum vulputate, nunc.
-
-==== Header Level 4
-
-Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est.
+* https://github.com/ochaloup/byteman-workshop[Byteman workshop for DevConf.cz 2018]
