--- a/TODO.adoc
+++ b/TODO.adoc
@@ -1,7 +1,7 @@
 = What to do
 
-* styling of links and code - it could be similar as it's at original blog http://blog.chalda.cz/2017/05/06/DNS-setting-for-Git-Hub-pages.html
-* is possible to generate TOC?
-* why RSS generation does not work
-* could be used the icons? if not it's necessary to remove things like `icon:smile-o[]` from the adoc sources
-* the social image should be shown in the article listing
+[x] styling of links and code - it could be similar as it's at original blog http://blog.chalda.cz/2017/05/06/DNS-setting-for-Git-Hub-pages.html
+[] is possible to generate TOC?
+[] why RSS generation does not work
+[x] could be used the icons? if not it's necessary to remove things like `icon:smile-o[]` from the adoc sources
+[x] the social image should be shown in the article listing
