fixing tags and category pages; adding next content from old blog

--- a/content/posts/2017-05-06-DNS-setting-for-GitHub-pages.adoc
+++ b/content/posts/2017-05-06-DNS-setting-for-GitHub-pages.adoc
@@ -8,8 +8,8 @@ chalda <ondrej.chaloupka@proton.me>
 :page-template: post
 :page-draft: false
 :page-slug: dns-settings-of-github-pages
-:page-category: DevOps
-:page-tags: github, dns
+:page-category: devops
+:page-tags: GitHub, DNS
 :page-description: How to setup DNS to work with GitHub pages.
 :page-socialImage:
 
