--- a/content/posts/_template.adoc
+++ b/content/posts/_template.adoc
@@ -2,6 +2,9 @@
 chalda <ondrej.chaloupka@proton.me>
 1.0, 2022-10-01
 
+:icons: font
+:toc: macro
+
 :page-template: post
 :page-draft: true
 :page-slug: perfecting-the-art-of-programming
