--- a/TODO.adoc
+++ b/TODO.adoc
@@ -5,4 +5,4 @@
 [] why RSS generation does not work
 [x] could be used the icons? if not it's necessary to remove things like `icon:smile-o[]` from the adoc sources
 [x] the social image should be shown in the article listing
-[] tag/ and category/ pages show wrong items
+[x] tag/ and category/ pages show wrong items
